--- a/ThreeSchool/app/src/main/res/layout/dialog_count.xml
+++ b/ThreeSchool/app/src/main/res/layout/dialog_count.xml
@@ -10,7 +10,7 @@
         android:id="@+id/infoText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="필요한 인원 수를 적어주세요."
+        android:text="저장할 엑셀의 이름을 적어주세요"
         android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintTop_toTopOf="parent"
@@ -24,8 +24,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="18dp"
         android:padding="8dp"
+        android:text="Check Temperature"
         android:textSize="18sp"
-        android:inputType="number"
         android:gravity="center"
         android:background="@drawable/border"
         app:layout_constraintTop_toBottomOf="@+id/infoText"
